--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="../styles/style.css">
   <title>FORMACIÓN </title>
 </head>
 <body>
@@ -14,8 +14,8 @@
   
            <p class="logo"> CRISTO SALVADOR</p>
           <!-- ****************************************************** -->
-          <a href="#alInicio"><img src="/media/ESCUDOCARM.png" alt="" class="logoC"></a>
-          <a href="euangelium/formacion.html" class="nombre">FORMACIÓN </a> 
+          <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+          <a href="/index.html" class="nombre">INICIO </a> 
       </div>
   </header> <br><br>
 <!-- *************************************************************************** -->
@@ -46,8 +46,8 @@
     <h1>  FORMACIÓN</h1>
       <div >
         <ol >
-         <li class="indice"><a href="/euangelium/biblia.html">BIBLIA</a></li>
-         <li class="indice"><a href="">IGLESIA</a></li>
+         <li class="indice"><a href="../euangelium/biblia.html">BIBLIA</a></li>
+         <li class="indice"><a href="../euangelium/iglesia.html">IGLESIA</a></li>
          <li class="indice"><a href="">JESÚS</a></li>
          <li class="indice"><a href="">BAUTISMO</a></li>
          <li class="indice"><a href="">EUCARISTÍA</a></li>
