--- a/euangelium/biblia.html
+++ b/euangelium/biblia.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="../styles/style.css">
   <title>BIBLIA</title>
 </head>
 <body>
+
   <p id="alInicio" class="principio"></p>
   <header >
     
@@ -14,8 +15,8 @@
   
            <p class="logo"> CRISTO SALVADOR</p>
           <!-- ****************************************************** -->
-          <a href="#alInicio"><img src="/media/ESCUDOCARM.png" alt="" class="logoC"></a>
-          <a href="euangelium/formacion.html" class="nombre">FORMACIÓN </a> 
+          <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+          <a href="/euangelium/01formacion.html" class="nombre">FORMACIÓN </a> 
       </div>
   </header> <br>
   <h1 class="init">BIBLIA</h1>
