--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="styles/index.css">
     <link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
     <title>ORDEN CARMELITA SEGLAR</title>
 </head>
@@ -33,7 +33,7 @@
       <p>Quiénes pertenecen a la Orden Seglar de los Carmelitas? <br> Aquellos miembros del pueblo de Dios, que llamados por el Señor Jesús, 
         y libres de impedimentos, acogen conscientemente su vocación aceptando el programa de Formación y de vida que ofrece la Orden Carmelita Seglar.</p>
         <div class="img-container">
-          <img src="/media/JUNTOS.jpg" alt="juntos">
+          <img src="media/JUNTOS.jpg" alt="juntos">
         </div>
        
       </div>
