--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 <!-- *************************************************************************** -->
 <section id="hero1">
-    <img src="/media/PORTADA2023.jpeg" alt="">
+    <img src="media/PORTADA2023.jpeg" alt="">
 </section>
 <!--*****************************************************************************  -->
 <section id="">
