--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -15,7 +15,7 @@
            <p class="logo"> CRISTO SALVADOR</p>
           <!-- ****************************************************** -->
           <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-          <a href="/index.html" class="nombre">INICIO </a> 
+          <a href="../index.html" class="nombre">INICIO </a> 
       </div>
   </header> <br><br>
 <!-- *************************************************************************** -->
@@ -48,11 +48,11 @@
         <ol >
          <li class="indice"><a href="../euangelium/biblia.html">BIBLIA</a></li>
          <li class="indice"><a href="../euangelium/iglesia.html">IGLESIA</a></li>
+         <li class="indice"><a href="../euangelium/imagenes.html">IMAGENES</a></li>
          <li class="indice"><a href="">JESÚS</a></li>
          <li class="indice"><a href="">BAUTISMO</a></li>
          <li class="indice"><a href="">EUCARISTÍA</a></li>
          <li class="indice"><a href="">ORACIÓN</a></li>
-         <li class="indice"><a href=""></a></li>
          <li class="indice"><a href=""></a></li>
          <li class="indice"><a href=""></a></li>
          <li class="indice"><a href=""></a></li>
