--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -49,10 +49,10 @@
          <li class="indice"><a href="../euangelium/biblia.html">BIBLIA</a></li>
          <li class="indice"><a href="../euangelium/iglesia.html">IGLESIA</a></li>
          <li class="indice"><a href="../euangelium/imagenes.html">IMAGENES</a></li>
+         <li class="indice"><a href="../euangelium/oracion.html">ORACIÓN</a></li>
          <li class="indice"><a href="">JESÚS</a></li>
          <li class="indice"><a href="">BAUTISMO</a></li>
          <li class="indice"><a href="">EUCARISTÍA</a></li>
-         <li class="indice"><a href="">ORACIÓN</a></li>
          <li class="indice"><a href=""></a></li>
          <li class="indice"><a href=""></a></li>
          <li class="indice"><a href=""></a></li>
