--- a/euangelium/imagenes.html
+++ b/euangelium/imagenes.html
@@ -7,6 +7,18 @@
     <title>IMÁGENES</title>
 </head>
 <body>
+    <p id="alInicio" class="principio"></p>
+    <header >
+      
+        <div class="container" >
+    
+             <p class="logo"> CRISTO SALVADOR</p>
+            <!-- ****************************************************** -->
+            <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+            <a href="../index.html" class="nombre">INICIO </a> 
+        </div>
+    </header> <br><br><br>
+  <!-- *************************************************************************** -->
   <h3>
       Mat 4:10 Dice entonces Jesús: "Apártate, Satanás, porque está escrito: Al Señor tu Dios adorarás, y sólo a él darás culto."
   </h3>  
