--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -50,9 +50,9 @@
          <li class="indice"><a href="../euangelium/iglesia.html">IGLESIA</a></li>
          <li class="indice"><a href="../euangelium/imagenes.html">IMAGENES</a></li>
          <li class="indice"><a href="../euangelium/oracion.html">ORACIÓN</a></li>
-         <li class="indice"><a href="">JESÚS</a></li>
-         <li class="indice"><a href="">BAUTISMO</a></li>
-         <li class="indice"><a href="">EUCARISTÍA</a></li>
+         <li class="indice"><a href="../euangelium/maria.html">VIRGEN MARÍA</a></li>
+         <li class="indice"><a href=""></a></li>
+         <li class="indice"><a href=""></a></li>
          <li class="indice"><a href=""></a></li>
          <li class="indice"><a href=""></a></li>
          <li class="indice"><a href=""></a></li>
