--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -51,12 +51,9 @@
          <li class="indice"><a href="../euangelium/imagenes.html">IMAGENES</a></li>
          <li class="indice"><a href="../euangelium/oracion.html">ORACIÓN</a></li>
          <li class="indice"><a href="../euangelium/maria.html">VIRGEN MARÍA</a></li>
-         <li class="indice"><a href=""></a></li>
-         <li class="indice"><a href=""></a></li>
-         <li class="indice"><a href=""></a></li>
-         <li class="indice"><a href=""></a></li>
-         <li class="indice"><a href=""></a></li>
-         <li class="indice"><a href=""></a></li>
+         <li class="indice"><a href="../euangelium/salvacion.html">SALVACIÓN</a></li>
+         <li class="indice"><a href="../euangelium/trinidad.html">TRINIDAD</a></li>
+    
     
         </ol>
       </div>
