--- a/euangelium/iglesia.html
+++ b/euangelium/iglesia.html
@@ -16,17 +16,17 @@
            <p class="logo"> CRISTO SALVADOR</p>
           <!-- ****************************************************** -->
           <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-          <a href="/euangelium/01formacion.html" class="nombre">FORMACIÓN </a> 
+          <a href="01formacion.html" class="nombre">FORMACIÓN </a> 
       </div>
   </header> <br>
   <h1 class="init">IGLESIA</h1>
   <div >
     <ol >
-     <li class="indice"><a href="#UNA">UNA</a></li>
-     <li class="indice"><a href="#SANTA"></a>SANTA</li>
-     <li class="indice"><a href="#CATÓLICA"></a>CATÓLICA</li>
-     <li class="indice"><a href="#APOSTÓLICA">APOSTÓLICA</a></li>
-     <li class="indice"><a href="#EL PAPA"></a>EL PAPA</li>
+     <li class="li"><a href="#UNA">UNA</a></li>
+     <li class="li"><a href="#SANTA"></a>SANTA</li>
+     <li class="li"><a href="#CATÓLICA"></a>CATÓLICA</li>
+     <li class="li"><a href="#APOSTÓLICA">APOSTÓLICA</a></li>
+     <li class="li"><a href="#EL PAPA"></a>EL PAPA</li>
     </ol>
   </div><br><hr>
   <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////// -->
