--- a/euangelium/oracion.html
+++ b/euangelium/oracion.html
@@ -15,7 +15,7 @@
              <p class="logo"> CRISTO SALVADOR</p>
             <!-- ****************************************************** -->
             <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-            <a href="../index.html" class="nombre">INICIO </a> 
+            <a href="01formacion.html" class="nombre">FORMACIÓN </a> 
         </div>
     </header> <br><br>
   <!-- *************************************************************************** -->
@@ -23,7 +23,7 @@
         LA ORACIÓN, CAMINO HACIA EL SEÑOR
     </H1>
 <H2>
-    1LA PRIMERA MORADA		
+    LA PRIMERA MORADA		
 </H2>
 
 <OL>
