--- a/euangelium/salvacion.html
+++ b/euangelium/salvacion.html
@@ -15,7 +15,7 @@
              <p class="logo"> CRISTO SALVADOR</p>
             <!-- ****************************************************** -->
             <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-            <a href="../index.html" class="nombre">INICIO </a> 
+            <a href="01formacion.html" class="nombre">FORMACIÓN </a> 
         </div>
     </header> <br><br>
   <!-- *************************************************************************** -->
@@ -24,8 +24,7 @@
         <li>INTRO</li>
         <li>TEOLOGIA REFORMADA</li>
         <li>LA JUSTIFICACIÓN : LA GRACIA, LA FE Y LAS OBRAS</li>
-        <li></li>
-        <li></li>
+      
     
     </OL>
 	
