--- a/euangelium/maria.html
+++ b/euangelium/maria.html
@@ -17,7 +17,7 @@
              <p class="logo"> CRISTO SALVADOR</p>
             <!-- ****************************************************** -->
             <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
-            <a href="../index.html" class="nombre">INICIO </a> 
+            <a href="01formacion.html" class="nombre">FORMACIÓN </a> 
         </div>
     </header> <br><br>
   <!-- *************************************************************************** -->
