--- a/euangelium/iglesia.html
+++ b/euangelium/iglesia.html
@@ -18,15 +18,16 @@
           <a href="#alInicio"><img src="../media/ESCUDOCARM.png" alt="" class="logoC"></a>
           <a href="01formacion.html" class="nombre">FORMACIÓN </a> 
       </div>
-  </header> <br>
+  </header> <br><br><br>
   <h1 class="init">IGLESIA</h1>
   <div >
     <ol >
      <li class="li"><a href="#UNA">UNA</a></li>
-     <li class="li"><a href="#SANTA"></a>SANTA</li>
-     <li class="li"><a href="#CATÓLICA"></a>CATÓLICA</li>
+     <li class="li"><a href="#SANTA">SANTA</a></li>
+     <li class="li"><a href="#CATÓLICA">CATÓLICA</a></li>
      <li class="li"><a href="#APOSTÓLICA">APOSTÓLICA</a></li>
-     <li class="li"><a href="#EL PAPA"></a>EL PAPA</li>
+     <li class="li"><a href="#EL PAPA">EL PAPA</a></li>
+     <li class="li"><a href="#SACERDOCIO">EL SACERDOCIO</a></li>
     </ol>
   </div><br><hr>
   <!-- /////////////////////////////////////////////////////////////////////////////////////////////////////// -->
@@ -331,4 +332,32 @@
       Quisiéramos terminar, por ahora, pues esto es aún bastante básico, con una cita del Papa Francisco de la carta EVANGELII GAUDIUM: “Todos los hombres tienen la necesidad de escuchar el Evangelio, los cristianos tenemos el deber de anunciarlo”<br><br>
       </P>
   </section>
-  <!-- ********************************************************************** -->
+  <!-- ********************************************************************** --> 
+  <section id="SACERDOCIO">
+    <h1>SACERDOCIO</h1>
+      <pre>
+
+CAMBIO DE SACEDOCIO
+Heb 7:11 Ahora bien, si la perfección era por medio del sacerdocio levítico (pues sobre esa base recibió el pueblo la ley), ¿qué necesidad había de que se levantara otro sacerdote según el orden de Melquisedec, y no designado según el orden de Aarón? 
+Heb 7:12 Porque cuando se cambia el sacerdocio, necesariamente ocurre también un cambio de la ley.
+
+Sal 110:4 Lo ha jurado Yahvé y no va a retractarse: "Tú eres por siempre sacerdote, según el orden de Melquisedec".  
+
+EL RITO 
+Gen 14:18 Entonces Melquisedec, rey de Salem, sacó pan y vino; él era sacerdote del Dios Altísimo. 
+Gen 14:19 Y lo bendijo, diciendo: Bendito sea Abram del Dios Altísimo, creador del cielo y de la tierra; 
+
+Luc 22:17 Tomó luego una copa, dio gracias y dijo: "Tomad esto y repartidlo entre vosotros; 
+Luc 22:18 porque os digo que, a partir de este momento, no beberé del producto de la vid hasta que llegue el Reino de Dios." 
+Luc 22:19 Tomó luego pan, dio gracias, lo partió y se lo dio diciendo: "Éste es mi cuerpo que se entrega por vosotros; haced esto en recuerdo mío." 
+Luc 22:20 De igual modo, después de cenar, tomó la copa, diciendo: "Esta copa es la nueva Alianza en mi sangre, que se derrama por vosotros. 
+
+1Co 11:23 Porque yo recibí del Señor lo que os transmití: que el Señor Jesús, la noche en que era entregado, tomó pan, 
+1Co 11:24 dando gracias, lo partió y dijo: "Este es mi cuerpo que se entrega por vosotros; haced esto en memoria mía." 
+1Co 11:25 Asimismo tomó el cáliz después de cenar, diciendo: "Esta copa es la nueva Alianza en mi sangre. Cuantas veces la bebiereis, hacedlo en memoria mía." 
+1Co 11:26 Pues cada vez que comáis este pan y bebáis de este cáliz, anunciáis la muerte del Señor, hasta que venga. 
+
+
+
+      </pre>
+  </section>
