--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -46,13 +46,15 @@
     <h1>  FORMACIÓN</h1>
       <div >
         <ol >
-         <li class="indice"><a href="../euangelium/biblia.html">BIBLIA</a></li>
-         <li class="indice"><a href="../euangelium/iglesia.html">IGLESIA</a></li>
-         <li class="indice"><a href="../euangelium/imagenes.html">IMAGENES</a></li>
-         <li class="indice"><a href="../euangelium/oracion.html">ORACIÓN</a></li>
-         <li class="indice"><a href="../euangelium/maria.html">VIRGEN MARÍA</a></li>
-         <li class="indice"><a href="../euangelium/salvacion.html">SALVACIÓN</a></li>
-         <li class="indice"><a href="../euangelium/trinidad.html">TRINIDAD</a></li>
+         <li class="li"><a href="../euangelium/biblia.html">BIBLIA</a></li>
+         <li class="li"><a href="../euangelium/iglesia.html">IGLESIA</a></li>
+         <li class="li"><a href="../euangelium/imagenes.html">IMAGENES</a></li>
+         <li class="li"><a href="../euangelium/oracion.html">ORACIÓN</a></li>
+         <li class="li"><a href="../euangelium/maria.html">VIRGEN MARÍA</a></li>
+         <li class="li"><a href="../euangelium/salvacion.html">SALVACIÓN</a></li>
+         <li class="li"><a href="../euangelium/trinidad.html">TRINIDAD</a></li>
+         <li class="li"><a href="../euangelium/perdónPecados.html">PERDÓN DE PECADOS</a></li>
+        <li class="indice"><a href="../euangelium/trinidad.html"></a></li>
     
     
         </ol>
