--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -49,7 +49,10 @@
       <h1> FORMACIÓN</h1>
       <div>
         <ol>
+          <li class="li"><a href="../euangelium/bautismo.html">BAUTISMO</a></li>
           <li class="li"><a href="../euangelium/biblia.html">BIBLIA</a></li>
+          <li class="li"><a href="../euangelium/diezmo.html">DIEZMO</a></li>
+          <li class="li"><a href="../euangelium/eucaristia.html">EUCARISTIA</a></li>
           <li class="li"><a href="../euangelium/iglesia.html">IGLESIA</a></li>
           <li class="li"><a href="../euangelium/imagenes.html">IMAGENES</a></li>
           <li class="li"><a href="../euangelium/oracion.html">ORACIÓN</a></li>
@@ -57,7 +60,6 @@
           <li class="li"><a href="../euangelium/salvacion.html">SALVACIÓN</a></li>
           <li class="li"><a href="../euangelium/trinidad.html">TRINIDAD</a></li>
           <li class="li"><a href="../euangelium/perdónPecados.html">PERDÓN DE PECADOS</a></li>
-          <li class="indice"><a href="../euangelium/trinidad.html"></a></li>
 
 
         </ol>
