--- a/euangelium/iglesia.html
+++ b/euangelium/iglesia.html
@@ -30,6 +30,8 @@
         <li class="li"><a href="#APOSTÓLICA">APOSTÓLICA</a></li>
         <li class="li"><a href="#EL PAPA">EL PAPA</a></li>
         <li class="li"><a href="#SACERDOCIO">EL SACERDOCIO</a></li>
+        <li class="li"><a href="#CONFESION">LA CONFESIÓN</a></li>
+        <li class="li"><a href="#BABILONIA">BABILONIA </a></li>
       </ol>
     </div><br>
     <hr>
@@ -442,7 +444,68 @@
       1Co 11:26 Pues cada vez que comáis este pan y bebáis de este cáliz, anunciáis la muerte del Señor, hasta que
       venga <br>
 
+    </section>
+    <!-- *********************************************************** -->
+    <section id="CONFESION"></section>
 
+    <h2>CONFESIÓN</h2> <br>
+    <br>
+    Lev 5:17 Finalmente, si una persona pecare, o hiciere alguna de todas aquellas cosas que por mandamiento de Jehová
+    no se
+    han de hacer, aun sin hacerlo a sabiendas, es culpable, y llevará su pecado. <br>
+    Lev 5:18 Traerá, pues, al sacerdote para expiación, según tú lo estimes, un carnero sin defecto de los rebaños; y el
+    sacerdote le hará expiación por el yerro que cometió por ignorancia, y será perdonado. <br>
+    <br>
+    Hch 19:18 Y muchos de los que habían creído venían, confesando y dando cuenta de sus hechos. <br>
+    Jn 20,21 <br>
+    Lc 17,31 <br>
+    Hch 19,18 <br>
+    Stgo 5,16 <br>
+    Jn 6,55-56  Gal 2,20 <br>
+    <br>
+    <br>
+    Mat 7:21 No todo el que me dice: Señor, Señor, entrará en el reino de los cielos, sino el que hace la voluntad de mi
+    Padre que está en los cielos. <br>
+    <br>
+    Luc 6:46 ¿Por qué me llamáis, Señor, Señor, y no hacéis lo que yo digo? <br>
+    <br>
+    Jua 20:21 Entonces Jesús les dijo otra vez: Paz a vosotros. Como me envió el Padre, así también yo os envío. <br>
+    Jua 20:22 Y habiendo dicho esto, sopló, y les dijo: Recibid el Espíritu Santo. <br>
+    Jua 20:23 A quienes remitiereis los pecados, les son remitidos; y a quienes se los retuviereis, les son retenidos.
+    <br>
+    <br>
+    Luc 17:14 Cuando él los vio, les dijo: Id, mostraos a los sacerdotes. Y aconteció que mientras iban, fueron
+    limpiados.
+    <br>
+    <br>
+    Hch 19:18 Y muchos de los que habían creído venían, confesando y dando cuenta de sus hechos. <br>
+    <br>
+    Stg 5:14 ¿Está alguno enfermo entre vosotros? Llame a los ancianos de la iglesia, y oren por él, ungiéndole con
+    aceite
+    en el nombre del Señor. <br>
+    Stg 5:15 Y la oración de fe salvará al enfermo, y el Señor lo levantará; y si hubiere cometido pecados, le serán
+    perdonados. <br>
+    Stg 5:16 Confesaos vuestras ofensas unos a otros, y orad unos por otros, para que seáis sanados. La oración eficaz
+    del
+    justo puede mucho. <br>
+    <br>
+
+
+    <!-- *********************************************************** -->
+    <section id="BABILONIA">
+      <h2>BABILONIA LA GRANDE</h2>
+
+      Apo 17:9 Esto, para la mente que tenga sabiduría: Las siete cabezas son siete montes, sobre los cuales se sienta
+      la
+      mujer,
+
+      BABILONIA no es una persona,, una iglesia o institucion sino una gran ciudad
+      Apo 17:18 Y la mujer que has visto es la gran ciudad que reina sobre los reyes de la tierra.
+      El estado vaticano no es una gran ciudad mide 0.49Km2 [49 hectáreas]
+
+      EL VATICANO NO ESTA SOBRE 7 COLINAS SINO SOBRE SOLO 1, LA COLINA VATICANA. UBICADA AL OESTE DEL TIBER
+
+      las 7 colinas se hallan al este del Tiber, y era donde se ubicaba la Roma antigua.
 
 
     </section>
