--- a/euangelium/maria.html
+++ b/euangelium/maria.html
@@ -58,6 +58,7 @@
             <li> Tenía 12 años y no se mencionan hermanos </li>
             <li> En la crucifixión </li>
             <li> EN LA RESURRECCIÓN </li>
+            <li><a href="#rosario">EL ROSARIO</a></li>
 
         </OL>
 
@@ -1103,6 +1104,77 @@
         JAYRE alégrate, regocíjate es el saludo mesiánico en Isaías, Zacarías y Ezequiel. <br>
         SALVE = SALUD de allí viene la palabra saludar. Es desear salud. <br>
 
+        <section>
+            <h2 id="rosario">EL ROSARIO</h2> <br>
+            <br>
+            Mt 6, 9-13 Padre Nuestro <br>
+            <br>
+            EL AVE MARIA <br>
+            DIOS TE SALVE MARÍA <br>
+            Luc 1:28 Y entrando el ángel en donde ella estaba, dijo: ¡Salve, muy favorecida! El Señor es contigo;
+            bendita tú entre
+            las mujeres. <br>
+            LLENA ERES DE GRACIA, EL SEÑOR ESTÁ CONTIGO <br>
+            Luc 1,28 κεχαριτωμενη <br>
+            <br>
+            BENDITA ERES, ENTRE LAS MUJERES Y BENDITO ES EL FRUTO DE TU VIENTRE, JESÚS <br>
+            <br>
+            Luc 1:42 y exclamó a gran voz, y dijo: Bendita tú entre las mujeres, y bendito el fruto de tu vientre. <br>
+            <br>
+            SANTA MARIA <br>
+            Luc 1:28 Y entrando el ángel en donde ella estaba, dijo: ¡Salve, muy favorecida! El Señor es contigo;
+            bendita tú entre
+            las mujeres. <br>
+            Rom 8:29 Porque a los que antes conoció, también los predestinó para que fuesen hechos conformes a la imagen
+            de su Hijo,
+            para que él sea el primogénito entre muchos hermanos. <br>
+            Rom 8:30 Y a los que predestinó, a éstos también llamó; y a los que llamó, a éstos también justificó; y a
+            los que
+            justificó, a éstos también glorificó. <br>
+            <br>
+            MADRE DE DIOS <br>
+            Luc 1:43 ¿Por qué se me concede esto a mí, que la madre de mi Señor venga a mí? <br>
+            <br>
+            RUEGA POR NOSOTROS <br>
+            Jua 2:3 Y faltando el vino, la madre de Jesús le dijo: No tienen vino. <br>
+            <br>
+            PECADORES <br>
+            1Jn 1:8 Si decimos que no tenemos pecado, nos engañamos a nosotros mismos, y la verdad no está en nosotros.
+            <br>
+            <br>
+            AHORA Y EN LA HORA DE NUESTRA MUERTE. AMEN <br>
+            Jua 19:25 Estaban junto a la cruz de Jesús su madre, y la hermana de su madre, María mujer de Cleofas, y
+            María
+            Magdalena. <br>
+            Jua 19:26 Cuando vio Jesús a su madre, y al discípulo a quien él amaba, que estaba presente, dijo a su
+            madre: Mujer, he
+            ahí tu hijo. <br>
+            Jua 19:27 Después dijo al discípulo: He ahí tu madre. Y desde aquella hora el discípulo la recibió en su
+            casa. <br>
+            <br>
+            Luc 1:48 Porque ha mirado la bajeza de su sierva; <br>
+            Pues he aquí, desde ahora me dirán bienaventurada todas las generaciones. <br>
+            <br>
+            REPETIR ORACIONES <br>
+            <br>
+            Mat 6:7 Y orando, no uséis vanas repeticiones, como los gentiles, que piensan que por su palabrería serán
+            oídos. <br>
+            <br>
+            Efe 5:19 hablando entre vosotros con salmos, con himnos y cánticos espirituales, cantando y alabando al
+            Señor en
+            vuestros corazones; <br>
+            <br>
+            Mat 26:44 Y dejándolos, se fue de nuevo, y oró por tercera vez, diciendo las mismas palabras. <br>
+            <br>
+            Mat 27:46 Cerca de la hora novena, Jesús clamó a gran voz, diciendo: Elí, Elí, ¿lama sabactani? Esto es:
+            Dios mío, Dios
+            mío, ¿por qué me has desamparado? <br>
+            <br>
+            1Jn 2:22 ¿Quién es el mentiroso, sino el que niega que Jesús es el Cristo? Este es anticristo, el que niega
+            al Padre y
+            al Hijo. <br>
+
+        </section>
 
 
 
