--- a/euangelium/01formacion.html
+++ b/euangelium/01formacion.html
@@ -53,6 +53,7 @@
           <li class="li"><a href="../euangelium/biblia.html">BIBLIA</a></li>
           <li class="li"><a href="../euangelium/diezmo.html">DIEZMO</a></li>
           <li class="li"><a href="../euangelium/eucaristia.html">EUCARISTIA</a></li>
+          <li class="li"><a href="../euangelium/hijo.html">EL HIJO</a></li>
           <li class="li"><a href="../euangelium/iglesia.html">IGLESIA</a></li>
           <li class="li"><a href="../euangelium/imagenes.html">IMAGENES</a></li>
           <li class="li"><a href="../euangelium/oracion.html">ORACIÓN</a></li>
