--- a/euangelium/iglesia.html
+++ b/euangelium/iglesia.html
@@ -405,6 +405,136 @@
         EVANGELII GAUDIUM: “Todos los hombres tienen la necesidad de escuchar el Evangelio, los cristianos tenemos el
         deber de anunciarlo”<br><br>
       </P>
+      <h2>CATÓLICA</h2> <br>
+      <br>
+      Es católica porque Cristo está presente en ella y porque Él nos ha enviado en misión al mundo entero. A todos los
+      hombres en todo el mundo. Mateo 28 19-20 Marcos 16 15 Lucas 24 47 Juan 20 21 Hechos 1 8 Romanos 1 5 <br>
+      EXTRA ECCLESIA NULA SALVIS significa que toda salvación viene de Cristo a través de su cuerpo, la iglesia. <br>
+      Cristo es el único mediador entre Dios y los hombres. 1Timoteo 2 4-5 <br>
+      La misión es exigencia de la catolicidad de la iglesia, es hacer participar al hombre de la comunión que existe
+      entre el
+      Padre, el Hijo y el Espíritu Santo, 2Corintios 5,14 1Timoteo 2 4 <br>
+      En CEC 834 afirma e invita a: <br>
+      1. Anunciar el evangelio <br>
+      2. Establecer comunidades locales <br>
+      3. Iglesias locales <br>
+      4. Dialogo respetuoso con otras comunidades descubriendo a Dios en ellos y como actúa <br>
+      5. Esfuerzo a la unidad <br>
+      Católica es la cualidad dada por el Señor a su iglesia: para todos los hombres y para todo el mundo. En la
+      plenitud de
+      la verdad. <br>
+      <br>
+      APOSTÓLICA <br>
+      Está fundada sobre la fe de los apóstoles <br>
+       En Efesios 2 20 cristo es la piedra y en Efesios 2 20 y 1Pedro 2 5 lo son los cristianos <br>
+       Juan 10 11 Jesús es el buen pastor y en Juan 21 15-17 Pedro es el pastor <br>
+       Mateo 28 18 cristo tiene todo poder y en Mateo 18 19 se lo comunica a Pedro <br>
+       Lucas 10:16 Quien les escucha a ustedes, me escucha a mí; quien les rechaza a ustedes, me rechaza a mí; y el que
+      me
+      rechaza a mí, rechaza al que me ha enviado.” <br>
+       Mateo 18:18 Yo les digo: “Todo lo que aten en la tierra, lo mantendrá atado el Cielo, y todo lo que desaten en
+      la
+      tierra, lo mantendrá desatado el Cielo. <br>
+       Juan 20:23 a quienes descarguen de sus pecados, serán liberados, y a quienes se los retengan, les serán
+      retenidos.”
+      <br>
+       Mateo 28:19 Vayan, pues, y consíganme discípulos de todas las naciones. Bautícenlos en el Nombre del Padre y del
+      Hijo
+      y del Espíritu Santo, <br>
+       Mateo 28:20 y enséñenles a cumplir todo lo que yo les he encomendado a ustedes. Yo estoy con ustedes todos los
+      días
+      hasta el fin de la historia.” <br>
+       Hechos 15,1-29 Pablo conocía las escrituras y ante un grave problema no recurre a ella sino a la iglesia <br>
+      <br>
+      <br>
+      1Ti 3:14 Te doy estas instrucciones con la esperanza de ir pronto a verte. <br>
+      1Ti 3:15 Pero si me demoro, para que sepas cómo debes portarte en la casa de Dios, que es la Iglesia del Dios
+      vivo,
+      pilar y base de la verdad. <br>
+      La iglesia es donde se guía a la verdad. Si con la biblia se interpreta dos tesis contradictorias la iglesia
+      orienta a
+      la verdad. <br>
+      No basta tener la Biblia sino estar en la Iglesia de Cristo <br>
+      <br>
+      <br>
+      EL PAPA <br>
+      a. Sobre Pedro la piedra que eligió el Señor <br>
+      Nos dicen que es eso del Papa, donde dice que Pedro fue Papa…… <br>
+      La primacía de Pedro <br>
+      Papa viene del griego Papas que significa padre. <br>
+      El papado es un servicio para la unidad la ortopraxis y la ortodoxia. <br>
+      Es significativo que en Juan 21,15 no se dirige a todos sino solo a Pedro. La sucesión apostólica: Pedro, Lino,
+      Cleto,
+      Clemente…… <br>
+      La autoridad fue creciendo y ya se nota en el 170 con Diógenes obispo de corinto que guardaba la carta de Clemente
+      I.
+      <br>
+      Irineo de Lion 140-200 discípulo de Policarpo discípulo de Juan evangelista reconoce el primado de Roma. <br>
+      <br>
+      En el 215 Víctor fija la navidad y oriente después del llamado de atención acepta. <br>
+      Para Agustín la piedra es cristo lo que no invalida que Pedro sea también en Cristo piedra. <br>
+      <br>
+      Otros argumentan que el papa no era importante porque los 4 primeros concilios tuvieron lugar en oriente sin la
+      presencia del papa. Lo que no ven es que en cada uno estuvieron presentes los emisarios del papa. En Nicea Osio
+      quien
+      junto a sus dos acompañantes fueron los primeros en firmar. Lo mismo en Éfeso con un clarísimo discurso inicial,
+      donde
+      ponía de manifiesto la primacía del obispo de Roma. <br>
+      Arguyen que el único fundamento puede ser cristo. 1 corintios 3,11. <br>
+      Y lo es, pero él pone a la iglesia y a Pedro. <br>
+      Se llama católica porque su mensaje es para todo el mundo. <br>
+      Apostólica porque es misionera, enviada. <br>
+      Efesios 2,20 cristo es la roca, en Juan 1,42 lo llama Kephas, en arameo roca. <br>
+      En Juan 10,11 él es el pastor, en Juan 21,15-17 Pedo es el pastor. <br>
+      En Mateo 28,18 cristo tiene todo poder, en mateo 16,18 le da las llaves a pedro. <br>
+      En Mateo 28,20 dice estaré con ustedes todos los días hasta el fin del tiempo, no dice estaré con ustedes si se
+      portan
+      bien. <br>
+      En el año 70 eligen a Ignacio obispo de Antioquía y acuña la palabra católico, que viene de KATA OLON que
+      significa
+      según la totalidad. <br>
+      Lo importante no es decirse católico sino serlo. <br>
+      <br>
+      Podemos con claridad decir que: <br>
+       En todas las listas de la elección de los apóstoles Pedro figura en primer lugar Mateo 10 2 Marcos 3 13 Lucas 6
+      12
+      <br>
+       Es el 1° en predicar Hechos 2, 14 <br>
+       Realiza el 1° milagro Hch 3, 1 <br>
+       El 1° testigo 4, 19-20 <br>
+       La 1° corrección 5, 3 <br>
+       1° en predicar a los gentiles 10, 31 <br>
+       En el debate de Jerusalén da la última palabra 15, 7-11 <br>
+       Los 4 evangelios cada uno a su modo lo dan a entender <br>
+       Mateo 16 18 Y ahora yo te digo: Tú eres Pedro (o sea Piedra), y sobre esta piedra edificaré mi Iglesia; <br>
+       Marcos 14 37 Volvió y los encontró dormidos. Y dijo a Pedro: “Simón, ¿duermes? ¿De modo que no pudiste
+      permanecer
+      despierto una hora? <br>
+       Lucas 22 31 ¡Simón, Simón! Mira que Satanás ha pedido permiso para sacudirlos a ustedes como trigo que se
+      limpia; <br>
+      Lucas 22 32 pero yo he rogado por ti para que tu fe no se venga abajo. Y tú, cuando hayas vuelto, tendrás que
+      fortalecer
+      a tus hermanos.” <br>
+       Juan 21 15 Cuando terminaron de comer, Jesús dijo a Simón Pedro: “Simón, hijo de Juan, ¿me amas más que éstos?”
+      Contestó: “Sí, Señor, tú sabes que te quiero.” Jesús le dijo: “Apacienta mis corderos.” <br>
+      Juan 21 16 Le preguntó por segunda vez: “Simón, hijo de Juan, ¿me amas?” Pedro volvió a contestar: “Sí, Señor, tú
+      sabes
+      que te quiero.” Jesús le dijo: “Cuida de mis ovejas.” <br>
+      Juan 21 17 Insistió Jesús por tercera vez: “Simón Pedro, hijo de Juan, ¿me quieres?” Pedro se puso triste al ver
+      que
+      Jesús le preguntaba por tercera vez si lo quería y le contestó: “Señor, tú lo sabes todo, tú sabes que te quiero.”
+      Entonces Jesús le dijo: “Apacienta mis ovejas. <br>
+      <br>
+       A mi niño de 3 años le gusta ver películas conmigo, pero aunque veamos y oigamos lo mismo, es cierto que no
+      entendemos
+      lo mismo, de igual manera muchos hermanos necesitan crecer y formarse para que podamos entender lo mismo. <br>
+      Quisiéramos terminar, por ahora, pues esto es aún bastante básico, con una cita del Papa Francisco de la carta
+      EVANGELII
+      GAUDIUM: “Todos los hombres tienen la necesidad de escuchar el Evangelio, los cristianos tenemos el deber de
+      anunciarlo”
+      <br>
+
+
     </section>
     <!-- ********************************************************************** -->
     <section id="SACERDOCIO">
