--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <p class="logo"> CRISTO SALVADOR
           <!-- ****************************************************** -->
           <a href="#alInicio"><img src="media/ESCUDOCARM.png" alt="" class="logoC"></a>
-          <a href="euangelium/01formacion.html" class="">FORMACIÓN </a>
+          <a href="euangelium/01formacion.html" class="a">APOLOGÍA </a>
+          <a href="noviciado/01formacion.html" class="a">FORMACIÓN </a>
       </div>
     </header>
     <!-- *************************************************************************** -->
