--- a/noviciado/01formacion.html
+++ b/noviciado/01formacion.html
@@ -27,7 +27,8 @@
       <h1> FORMACIÓN</h1>
       <div>
         <ol>
-          <li class="li"><a href="../noviciado/01formacion.html">LECTIO DIVINA</a></li>
+          <li class="li"><a href="../lectio/intro.html">LECTIO DIVINA</a></li>
+       
        
           <H2>INTRODUCCIÓN</H2> 
           <P>Orígenes (184_254 dC) recordaba que la lectura de las Escrituras requiere de atención, constancia y oración. Es una reflexión orante del texto Sagrado.</P> 
