--- a/lectio/mateo.html
+++ b/lectio/mateo.html
@@ -37,23 +37,22 @@
       <div>
         <h2>MATEO 1,1-17</h2>
         <pre>
-MATEO 1, 1-17
 LA LECTIO DIVINA
 
 1 LECTIO ¿QUÉ DIJO EL SEÑOR?
-.1 LA LECTURA DEL TEXTO ( DEFINIRLO Y COMPRENDERLO)
+.1 LA LECTURA DEL TEXTO ( DEFINIR Y COMPRENDER)
 .1.1 DEFINIR EL TEXTO
 .1.1.1 LATINOAMERICANA
 .1.1.2 JERUSALÉN
 .1.1.3 VERSIÓN GRIEGA (LXX- TISCHENDORF)
 .1.1.4 VERSIÓN LATINA (VULGATA)
-.1.1.5 VERSIÓN JUDIA (KADOSH)
+.1.1.5 VERSIÓN JUDÍA (KADOSH)
 .1.1.6 NVI
 .1.1.7 RV60
 .1.1.8 COMPARACIÓN E-SWORD
- El texto no tiene mayor variación. Por defecto usaré las Biblias de Jerusalén y la Latinoamericana.
+ El texto no tiene mayor variación. Por defecto usaré las Biblias de JERUSALÉN y la Latinoamericana.
 
-.1.2 COMPRENCIÓN DEL TEXTO EN SU CONTEXTO VITAL
+.1.2 COMPRENSIÓN DEL TEXTO EN SU CONTEXTO VITAL
 .1.2.1 LOS DESTINATARIOS
 .1.2.1.1 Cuál era la situación vital
 Años 64-70 la comunidad cristiana era expulsada de las sinagogas y esto genera una crisis en el seno de las familias
@@ -111,14 +110,14 @@ Por eso Mateo desarrollará la idea de rey, reino y reinado.
 Es el hijo de Abraham
 o En quien se realiza las promesas del Génesis:
 o
-Gén 12:1 Yavé dijo a Abram: “Deja tu país, a los de tu raza y a la familia de tu padre, y anda a la tierra que yo te
+Gén 12:1 Yahweh dijo a Abram: “Deja tu país, a los de tu raza y a la familia de tu padre, y anda a la tierra que yo te
 mostraré.
 Gén 12:2 Haré de ti una gran nación y te bendeciré; voy a engrandecer tu nombre, y tú serás una bendición.
 Gén 12:3 Bendeciré a quienes te bendigan y maldeciré a quienes te maldigan. En ti serán bendecidas todas las razas de la
 tierra.”
 o Citadas también por el apóstol Pablo en Rom 4,1-12 y Gal 3,7-9
 
-Mat 28:19 Vayan, pues, y consíganme discípulos de todas las naciones. Bautícenlos en el Nombre del Padre y del Hijo y
+Mat 28:19 Vayan, pues, y consíganme discípulos de todas las naciones. Bauticenlos en el Nombre del Padre y del Hijo y
 del Espíritu Santo,
 
 Mat 28:20 y enséñenles a cumplir todo lo que yo les he encomendado a ustedes. Yo estoy con ustedes todos los días hasta
@@ -2815,10 +2814,10 @@ Y lo que haga con amor sea útil a los demás.
     </section>
     <!-- *********************************************************************************** -->
     <section id="3.1-12">
-      <h2></h2>
+      <h2> MATEO 3.1-12</h2>
       <div>
         <pre>
-          MATEO 3.1-12
+         
 
           ARREPENTIRSE
           c 3.2 Vuélvanse a Dios: lit. cambien su manera de pensar; expresión que invita a un cambio radical de actitud respecto del pecado y a un retorno a Dios; el mismo verbo, que se ha traducido frecuentemente por arrepentirse, puede traducirse como convertirse, cambiar de actitud, abandonar los pecados.
@@ -2883,7 +2882,7 @@ Y lo que haga con amor sea útil a los demás.
           Estamos sobre manera inclinados a olvidar esto. Hablamos del amor y de la misericordia de Dios y no nos acordamos bastante de Su justicia y santidad.
 
           Seamos muy cuidadosos acerca de este punto. No es cariño verdadero ocultar los terrores del Señor. Es de suma importancia que se le enseñe al incrédulo su  peligro, que está al borde de un abismo y que si muriere sin convertirse pasará la eternidad en el infierno. Es verdadera caridad advertir el peligro a un ciego  que está al precipitarse. Es mayor caridad advertir al alma incrédula, a la cual le falta la vista espiritual, la fe cristiana, el infierno a que avanza y suplicarle que se convierta al amorosísimos Jesús, para que por los méritos de su preciosa sangre reciba el perdón y la salvación y al fin de la entrada feliz en el cielo donde  está la plenitud de la gracia eterna.
-          
+
           Finalmente, Juan el Bautista habló con precisión sobre la completa seguridad de los verdaderos creyentes. Enseñó, que había un "granero" para todos los que  eran trigo de Cristo y que allí serían recogidos el día de Su venida. Esta también es una doctrina que requiere mucho la humanidad. Los mejores creyentes  necesitan que se les infunda ánimo, pues están todavía revestidos de la carne; viven en el mundo malvado; son tentadas frecuentemente por el demonio. Debe  recordárseles a menudo que Jesús jamás los dejará, ni abandonará y enseñarles que nadie puede arrebatar Sus ovejas de Sus manos. El los guiará felizmente a  través de esta vida y al fin les dará la Gloria eterna.
 
           Serán puestos a cubierto el día de la ira; estarán seguros como Noé en el arca. Que penetren estas cosas profundamente en  nuestros corazones. Vivimos en tiempos en que se enseñan muchos errores. Nunca olvidemos las cualidades distintivas del  ministro que es fiel. Bien hubiera sido para la iglesia de Cristo, que todos sus ministros hubieran sido más semejantes a  Juan el Bautista.
